[package]
name = "ht"
version = "0.1.0"
authors = ["Max Gortman <mgortman@microsoft.com>"]

[dependencies]
futures-await = { git = 'https://github.com/alexcrichton/futures-await' }
hyper = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
tokio-proto= "*"
tokio-service = "*"
native-tls = "*"
num_cpus = "*"
mime = "*"
rustls = "*"
url = "*"
tokio-rustls = { version = "*", features = ["tokio-proto"] }
tokio-tls = { version = "*", features = ["tokio-proto"] }

[profile.release]
debug = true